--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,9 @@
 <resources>
     <string name="app_name">DataBindingSimple</string>
-    <string name="title_activity_login">Sign in</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="nameFormat">Full Name: %1$s%2$s</string>
+    <string name="use_easy">基础用法</string>
+    <string name="use_twoway">双向绑定</string>
+    <string name="use_layout">layout用法</string>
+    <string name="use_resource">resource用法</string>
+    <string name="use_include">include用法</string>
 </resources>
